--- a/app/src/main/res/anim/fade_in.xml
+++ b/app/src/main/res/anim/fade_in.xml
@@ -5,7 +5,7 @@
     <alpha android:fromAlpha="0.1"
         android:toAlpha="1.0"
         android:duration="3000"
-        android:repeatcount="2"
+        android:repeatCount="infinite"
 
         />
 
